--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,10 +30,11 @@ test:
   imports:
     - matlab_kernel
   commands:
-    - pip check
+    - jupyter kernelspec list | grep matlab
   requires:
     - pip
-
+    - m2w64-grep  # [win]
+ 
 about:
   home: https://github.com/Calysto/matlab_kernel
   license: MIT
