--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,8 +16,9 @@ build:
 
 requirements:
   build:
-    - python   # [build_platform != target_platform]
-    - pip      # [build_platform != target_platform]
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - pip                                    # [build_platform != target_platform]
   host:
     - pip
     - python
