--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -19,8 +19,10 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - pip                                    # [build_platform != target_platform]
+    - setuptools                             # [build_platform != target_platform]
   host:
     - pip
+    - setuptools
     - python
   run:
     - python
